# otello

./: README.md  info.txt
eclipse-workspace/ex3/: .cproject
eclipse-workspace/ex3/src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  CellMap.cpp  CellMap.h  ConsoleMsgs.cpp  ConsoleMsgs.h  DefaultLogic.cpp  DefaultLogic.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  MainMenu.cpp  MainMenu.h  MiniMaxAlgo.cpp  MiniMaxAlgo.h  MiniMaxLogic.cpp  Player.h  Point.cpp  Point.h  String.cpp  String.h  main.cpp
